src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Gotransverse Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Gotransverse Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <label>Gotransverse Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Gotransverse Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <label>Gotransverse Shipping Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tract_Contact_Eid__c</fullName>
        <label>Gotransverse Contact Eid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>